--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -36,7 +36,7 @@
   },
   "addUnit": {
     "title": "Add Unit",
-    "subTitle": "Welcome to SnowMakers. Add your first unit to get started.",
+    "subTitle": "Welcome to SnowBnB. Add your first unit to get started.",
     "unitName": "Unit Name",
     "modelId": "Model Id",
     "password": "Password",
@@ -112,8 +112,10 @@
     "pressure": "Pressure",
     "temp": "Temperature",
     "wind": "Wind",
+    "wetBulbTemp": "°F WB",
     "addReservation": "Add Reservation",
     "editReservation": "Edit Reservation",
+    "swingController": "Swing Controller",
     "on": "On",
     "off": "Off",
     "connect": "Connect",
