update on localization

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -1,5 +1,5 @@
 {
-  "appName": "SnowMakers",
+  "appName": "SnowBnB",
   "languageSelection": {
     "title": "أختر اللغة التي تفضلها",
     "arabic": "العربية",
