--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,5 +1,5 @@
 {
-  "appName": "SnowMakers",
+  "appName": "SnowBnB",
   "languageSelection": {
     "title": "Choose the language you\nprefer",
     "arabic": "العربية",
